@@ -1,3 +1,9 @@
+2001-04-02  Gregory Leblanc  <gleblanc@cu-portland.edu>
+
+	* gnome-core.spec.in: Fixed %files section to include some
+	directories as well as their contents. 
+	Updated to do the scrollkeeper ditty. 
+
 2001-03-28  Gregory Leblanc  <gleblanc@cu-portland.edu>
 
 	Reviewed by: George Lebl <jirka@5z.com>
